--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4"
   }
 }
